--- a/Flexbox_And_Responsive/Flexbox/app.css
+++ b/Flexbox_And_Responsive/Flexbox/app.css
@@ -12,11 +12,18 @@ h1 {
     border: 5px solid #003049;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
-    align-items: center;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    /* align-content: center; */
+    /* align-content: space-around; */
 }
 #container div {
     width:200px;
     height: 200px;
+    text-align: center;
+    font-size: 5em;
+}
+#container div:nth-of-type(2) {
+    align-self: center;
 }
