--- a/Flexbox_And_Responsive/Flexbox/app.css
+++ b/Flexbox_And_Responsive/Flexbox/app.css
@@ -27,3 +27,21 @@ h1 {
 #container div:nth-of-type(2) {
     align-self: center;
 }
+main {
+    display: flex;
+    width: 80%;
+    height: 500px;
+    border: 5px solid #003049;
+    margin: 0 auto;
+}
+h2 {
+    text-align: center;
+}
+main .sidebar {
+    flex: 1 2 300px;
+    background-color: rgb(209, 125, 205);
+}
+main .maincontent {
+    background-color: rgb(107, 214, 148);
+    flex: 2 1 800px;
+}
