--- a/Flexbox_And_Responsive/MediaQueries Starter/app.css
+++ b/Flexbox_And_Responsive/MediaQueries Starter/app.css
@@ -8,13 +8,69 @@ h1 {
 }
 nav {
     font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
 }
-
 ul,li {
     display: inline;
     margin: 0;
     padding: 0;
+    
 }
+ul {
+    display: flex;
+    flex-grow: 1;
+    max-width: 40%;
+    justify-content: space-around;
+}
+
+/* @media (min-width:600px) and (max-width:800px) {
+    h1 {
+        color: purple;
+    }
+} */
+
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+    body {
+        background-color: orange; 
+    }
+    h1 {
+        font-size: 4em;
+    }
+}
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+    body {
+        background-color: green;
+    }
+
+}
+ /* Small devices (landscape phones, less than 768px) */
+ @media (max-width: 767.98px) {
+    body {
+        background-color: rgb(197, 106, 106);  
+    }
+    h1 {
+        font-size: 2em;
+    }
+    nav, nav ul{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+
+}
+@media (max-width: 575.98px) {
+    body {
+        background-color: blue;
+    }
+}
+
+
+
+
+
 
 
 
