--- a/Mongoose-Express-Project/views/products/new.ejs
+++ b/Mongoose-Express-Project/views/products/new.ejs
@@ -25,11 +25,11 @@
                 <label for="price">Price: </label><input type="number" name="price" id="price" placeholder="$">
             </div>
             <div>
-                <label for="category">Category</label>
+                <label for="category">Category:</label>
                 <select name="category" id="category ">
-                    <option value="fruit">Fruit</option>
-                    <option value="vegetable">Vegetable</option>
-                    <option value="diary">Diary</option>
+                    <% for(let category of categories){ %>
+                    <option value="<%=category%>"><%=category%></option>    
+                    <%}%>
                 </select>
             </div>
             <input type="submit" value="Submit">
