--- a/Mongoose-Express-Project/views/products/show.ejs
+++ b/Mongoose-Express-Project/views/products/show.ejs
@@ -10,5 +10,13 @@
     <h1><%= product.name %> </h1>
     <h2>price: <%= product.price %> </h2>
     <h2>category: <%= product.category %> </h2>
+    <a href="/product/<%= product._id %>/update">Update</a>
+    <a href="/products">All Products</a>
+    <div>
+        <form action="/product/<%= product._id %>?_method=DELETE" method="post">
+            <button type="submit">Delete</button>
+        </form>
+    </div>
+    
 </body>
 </html>
