--- a/Mongoose-Express-Project/views/products/update.ejs
+++ b/Mongoose-Express-Project/views/products/update.ejs
@@ -13,14 +13,14 @@
                 <label for="name">Name: </label><input id="name" type="text" name="name" placeholder="Enter Name" value= "<%= product.name %> ">
             </div>
             <div>
-                <label for="price">Price: </label><input type="number" name="price" id="price" placeholder="$" value="<%= product.price %> ">
+                <label for="price">Price: </label><input type="number" name="price" id="price" placeholder="$" value=<%= product.price %> >
             </div>
             <div>
-                <label for="category">Category</label>
+                <label for="category">Category:</label>
                 <select name="category" id="category ">
-                    <option value="fruit">Fruit</option>
-                    <option value="vegetable">Vegetable</option>
-                    <option value="diary">Diary</option>
+                    <% for(let category of categories){ %>
+                    <option value="<%=category%>"<%= category === product.category? 'selected':'' %> ><%=category%></option>    
+                    <%}%>
                 </select>
             </div>
             <input type="submit" value="Submit">
