--- a/CSS/Flexbox_And_Responsive/MediaQueries/app.css
+++ b/CSS/Flexbox_And_Responsive/MediaQueries/app.css
@@ -26,11 +26,11 @@ ul {
 }
 
 
-/* @media (min-width: 600px) and (max-width: 800px){
+ @media (min-width: 600px) and (max-width: 800px){
     h1 {
         color: purple;
     }
-} */
+}
 
 
 /* @media (max-width: 1500px){
@@ -78,7 +78,7 @@ h1 {
  }
 } */
 
-/* 
+
 @media (max-width: 768px){
     h1 {
         font-size: 4em;
@@ -93,4 +93,4 @@ h1 {
     h1 {
         font-size: 3em;
     }
-} */
+}
